[package]
name = "python-smartcore"
version = "0.1.0"
authors = ["SmartCore Developers"]
description = "Python bindings for smartcore, a machine learning library written in rust."
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "smartcore"
crate-type = ["cdylib"]

[dependencies]
ndarray = {version = "0.14.0", features = ["serde"] }
numpy = "0.12.1"
pyo3 = { version = "0.12.4", features = ["extension-module"] }
serde_json = "1.0.60"

[dependencies.smartcore]
branch = "development"
git = "https://github.com/smartcorelib/smartcore"
features = ["ndarray-bindings"]
